--- a/DesktopC#App/ProjectAssistant/ProjectAssistant.csproj
+++ b/DesktopC#App/ProjectAssistant/ProjectAssistant.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="FontAwesome.Sharp" Version="6.6.0" />
   </ItemGroup>
 
