ui and logic of folder pane is done. ui of templates pane is done. missing some logic of templates pane.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "powershell.codeFormatting.ignoreOneLineBlock": false
+  "powershell.codeFormatting.ignoreOneLineBlock": false,
+  "postman.settings.dotenv-detection-notification-visibility": false
 }
